<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_movie"
    tools:context=".Activity.Edit_Your_Profile_Activity">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_your_profile"
        android:text="Edit Your Profile"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
    />
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/edit_your_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/textview_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_photo"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.15"
        />
    <EditText
        android:id="@+id/edt_fullname"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textColor="#a2a4b5"
        android:hint="@string/full_name"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_4"
        android:textColorHint="#a2a4b5"
        app:layout_constraintHorizontal_bias="0.44"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_5"
        android:text="@string/email_addres"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_fullname"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.14"
        />
    <EditText
        android:id="@+id/edt_email_address"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:textColor="#a2a4b5"
        android:textColorHint="#a2a4b5"
        android:hint="@string/email_addres"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_5"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.44"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_6"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_address"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.14"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:textColor="#a2a4b5"
        android:textColorHint="#a2a4b5"
        android:hint="@string/password"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_6"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.44"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_8"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.16"
        />
    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:textColor="#a2a4b5"
        android:textColorHint="#a2a4b5"
        android:hint="@string/confirm_password"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_8"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.44"
        android:padding="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_profile"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Update My Profile"
        android:textAllCaps="false"
        android:background="@drawable/button_backgound_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>