<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_movie"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Welcome Back , Movie Lover!"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintHorizontal_bias=".4"
        />
    <TextView
        android:id="@+id/textview_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_addres"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_3"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.15"
        />
    <EditText
        android:id="@+id/edt_email"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textColor="#a2a4b5"
        android:inputType="textEmailAddress"
        android:hint="@string/email_addres"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_4"
        android:textColorHint="#a2a4b5"
        app:layout_constraintHorizontal_bias="0.44"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_5"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.14"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:textColor="#a2a4b5"
        android:textColorHint="#a2a4b5"
        android:hint="@string/password"
        android:background="@drawable/edittext_border_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_5"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.44"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_6"
        android:text="Forgot Password ?"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.8"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAllCaps="false"
        android:background="@drawable/button_backgound_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_6"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
        <TextView
            android:id="@+id/text_view_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create new account ? "
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias=".4"
            />

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toEndOf="@+id/text_view_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    <ImageView
        android:id="@+id/img_google"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_7"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias=".3"
        />
    <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:background="@drawable/facebook"
        app:layout_constraintStart_toEndOf="@+id/img_google"
        app:layout_constraintTop_toBottomOf="@+id/text_view_7"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>